--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-   
-    "start": "node BACKEND/server.js"
+    "start": "node Backend/server.js",
+    "dev": "npx nodemon Backend/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +17,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.1",
+    "mongoose": "^9.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
