--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "Self-Test-backend-/Server.js",
+  "main": "Server.js",
   "type": "module",
   "scripts": {
     "start": "node Server.js",
